--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenuActivity">
-
+        <activity android:name=".MainMenuActivity"></activity>
+        <activity android:name=".Pictures">
         </activity>
-
-        <activity android:name=".Pictures" >
+        <activity android:name=".DairyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
