--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenuActivity"></activity>
-        <activity android:name=".Pictures">
-        </activity>
+        <activity android:name=".MainMenuActivity" />
+        <activity android:name=".Pictures" />
         <activity android:name=".DairyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewDairyEntryActivity" />
+        <activity android:name=".ViewADairyEntryActivity"></activity>
     </application>
 
 </manifest>
