--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,25 @@
         <activity android:name=".MainMenuActivity" />
         <activity android:name=".Pictures" />
         <activity android:name=".DairyActivity">
+        </activity>
+        <activity android:name=".IntroActivity">
+        </activity>
+        <activity android:name=".NewDairyEntryActivity">
+
+        </activity>
+        <activity android:name=".ViewADairyEntryActivity">
+
+        </activity>
+        <activity android:name=".MusicActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IntroActivity">
+        <activity android:name=".PictureActivity">
+
         </activity>
-        <activity android:name=".NewDairyEntryActivity" />
-        <activity android:name=".ViewADairyEntryActivity"></activity>
     </application>
 
 </manifest>
